feat: Add content to the Tater Tots recipe page
Add an image of tater tots, a brief description of the dish, a list of
ingredients, and step-by-step instructions. Also add links to the
homepage and to the original source of the recipe

The recipe is not original content and has been taken directly from
the website "https://www.allrecipes.com", specifically from the page
"https://www.allrecipes.com/recipe/229156/tater-tots/" with little to no
modification

--- a/recipes/tater_tots.html
+++ b/recipes/tater_tots.html
@@ -6,5 +6,36 @@
     </head>
     <body>
         <h1>Tater Tots</h1>
+
+        <figure style="width: 50%;">
+            <img src="https://static.vecteezy.com/system/resources/previews/030/626/195/non_2x/tater-tots-image-hd-free-photo.jpg" alt="A pile of golden-brown, crispy tater tots served on a white paper-lined plate with a small side dish of ketchup." style="max-width: 100%;" />
+            <figcaption style="text-align: center;">Image via <a href="https://www.vecteezy.com/" target="_blank" rel="noopener noreferrer">Vecteezy</a></figcaption>
+        </figure>
+
+        <h2>Description</h2>
+        <p>Once you try these tater tots, you'll never have to buy frozen store-bought tots again! A delicious way for people of all ages to enjoy their childhood favorite. Garnish with fresh parsley and serve hot with remoulade sauce for dipping.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li><strong>Potatoes</strong>: Start with two medium russet potatoes.</li>
+            <li><strong>Parsley</strong>: Fresh parsley adds color and flavor.</li>
+            <li><strong>Flour</strong>: All-purpose flour helps hold the tots together and is essential for crispiness.</li>
+            <li><strong>Seasonings</strong>:  The tater tots are seasoned with salt, seasoned pepper, and onion powder.</li>
+            <li><strong>Oil</strong>: Peanut oil is perfect for frying homemade tater tots.</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil, then drain, the potatoes.</li>
+            <li>Shred the potatoes and drain the excess moisture.</li>
+            <li>Mix the potatoes with parsley, flour, and seasonings.</li>
+            <li>Shape the mixture into tots.</li>
+            <li>Fry the tots until they&rsquo;re golden and crispy.</li>
+        </ol>
+
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="https://www.allrecipes.com/recipe/254894/homemade-tater-tots/" target="_blank" rel="noopener noreferrer">Original Recipe</a></li>
+        </ul>
     </body>
 </html>
