feat: Add more recipe pages
Add 2 new recipe pages: Fried Mozzarella Cheese Sticks and Paneer Tikka
Masala. Update all pages so that any page is accessible from any other.
Also update tater tots image attribution

The image used on the tater tots page was not properly attributed

--- a/recipes/tater_tots.html
+++ b/recipes/tater_tots.html
@@ -9,11 +9,15 @@
 
         <figure style="width: 50%;">
             <img src="https://static.vecteezy.com/system/resources/previews/030/626/195/non_2x/tater-tots-image-hd-free-photo.jpg" alt="A pile of golden-brown, crispy tater tots served on a white paper-lined plate with a small side dish of ketchup." style="max-width: 100%;" />
-            <figcaption style="text-align: center;">Image via <a href="https://www.vecteezy.com/" target="_blank" rel="noopener noreferrer">Vecteezy</a></figcaption>
+            <figcaption style="text-align: center;">
+                <a href="https://www.vecteezy.com/photo/30626195-tater-tots-image-hd" target="_blank" rel="noopener noreferrer">Tater Tots image HD</a>
+                by <a href="https://www.vecteezy.com/members/104581530157476087020" target="_blank" rel="noopener noreferrer">Icon Ade</a>
+                via <a href="https://www.vecteezy.com/" target="_blank" rel="noopener noreferrer">Vecteezy</a>
+            </figcaption>
         </figure>
 
         <h2>Description</h2>
-        <p>Once you try these tater tots, you'll never have to buy frozen store-bought tots again! A delicious way for people of all ages to enjoy their childhood favorite. Garnish with fresh parsley and serve hot with remoulade sauce for dipping.</p>
+        <p>Skip the freezer aisle and make this tater tot recipe at home. They&rsquo;re so much more delicious than the store-bought stuff!</p>
 
         <h2>Ingredients</h2>
         <ul>
@@ -33,8 +37,11 @@
             <li>Fry the tots until they&rsquo;re golden and crispy.</li>
         </ol>
 
+        <h2>More Links</h2>
         <ul>
             <li><a href="../index.html">Home</a></li>
+            <li><a href="./fried_mozarella_cheeze_sticks.html">Fried Mozzarella Cheese Sticks</a></li>
+            <li><a href="./paneer_tikka_masala.html">Paneer Tikka Masala</a></li>
             <li><a href="https://www.allrecipes.com/recipe/254894/homemade-tater-tots/" target="_blank" rel="noopener noreferrer">Original Recipe</a></li>
         </ul>
     </body>
