--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/tater_tots.html">Tater Tots</a>
+        <ul>
+            <li><a href="./recipes/tater_tots.html">Tater Tots</a></li>
+            <li><a href="./recipes/fried_mozarella_cheeze_sticks.html">Fried Mozzarella Cheese Sticks</a></li>
+            <li><a href="./recipes/paneer_tikka_masala.html">Paneer Tikka Masala</a></li>
+        </ul>
     </body>
 </html>
