feat: Add styling to the website
- Add CSS styling using only 1 file
- Remove existing inline styles and replace them with classes and id's
- Center EVERYTHING on every page
- Give the title a background color for both light and dark mode
- Divide recipe pages into sections
- Give each section header a unique background color for both light and
  dark mode
- Make the ol li::marker bold in every recipe's instructions section

--- a/recipes/tater_tots.html
+++ b/recipes/tater_tots.html
@@ -3,46 +3,57 @@
     <head>
         <meta charset="UTF-8" />
         <title>Tater Tots</title>
+        <link rel="stylesheet" href="../style.css" />
     </head>
     <body>
-        <h1>Tater Tots</h1>
+        <div id="hero">
+            <h1 id="title">Tater Tots</h1>
 
-        <figure style="width: 50%;">
-            <img src="https://static.vecteezy.com/system/resources/previews/030/626/195/non_2x/tater-tots-image-hd-free-photo.jpg" alt="A pile of golden-brown, crispy tater tots served on a white paper-lined plate with a small side dish of ketchup." style="max-width: 100%;" />
-            <figcaption style="text-align: center;">
-                <a href="https://www.vecteezy.com/photo/30626195-tater-tots-image-hd" target="_blank" rel="noopener noreferrer">Tater Tots image HD</a>
-                by <a href="https://www.vecteezy.com/members/104581530157476087020" target="_blank" rel="noopener noreferrer">Icon Ade</a>
-                via <a href="https://www.vecteezy.com/" target="_blank" rel="noopener noreferrer">Vecteezy</a>
-            </figcaption>
-        </figure>
+            <figure class="img">
+                <img src="https://static.vecteezy.com/system/resources/previews/030/626/195/non_2x/tater-tots-image-hd-free-photo.jpg" alt="A pile of golden-brown, crispy tater tots served on a white paper-lined plate with a small side dish of ketchup." style="max-width: 100%;" />
+                <figcaption>
+                    <a href="https://www.vecteezy.com/photo/30626195-tater-tots-image-hd" target="_blank" rel="noopener noreferrer">Tater Tots image HD</a>
+                    by <a href="https://www.vecteezy.com/members/104581530157476087020" target="_blank" rel="noopener noreferrer">Icon Ade</a>
+                    via <a href="https://www.vecteezy.com/" target="_blank" rel="noopener noreferrer">Vecteezy</a>
+                </figcaption>
+            </figure>
+        </div>
 
-        <h2>Description</h2>
-        <p>Skip the freezer aisle and make this tater tot recipe at home. They&rsquo;re so much more delicious than the store-bought stuff!</p>
+        <div class="section" id="description">
+            <h2 class="section-header">Description</h2>
+            <p>Skip the freezer aisle and make this tater tot recipe at home. They&rsquo;re so much more delicious than the store-bought stuff!</p>
+        </div>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li><strong>Potatoes</strong>: Start with two medium russet potatoes.</li>
-            <li><strong>Parsley</strong>: Fresh parsley adds color and flavor.</li>
-            <li><strong>Flour</strong>: All-purpose flour helps hold the tots together and is essential for crispiness.</li>
-            <li><strong>Seasonings</strong>:  The tater tots are seasoned with salt, seasoned pepper, and onion powder.</li>
-            <li><strong>Oil</strong>: Peanut oil is perfect for frying homemade tater tots.</li>
-        </ul>
+        <div class="section" id="ingredients">
+            <h2 class="section-header">Ingredients</h2>
+            <ul class="ingredients-list">
+                <li><span class="ingredient-name">Parsley</span>: Fresh parsley adds color and flavor.</li>
+                <li><span class="ingredient-name">Potatoes</span>: Start with two medium russet potatoes.</li>
+                <li><span class="ingredient-name">Flour</span>: All-purpose flour helps hold the tots together and is essential for crispiness.</li>
+                <li><span class="ingredient-name">Seasonings</span>:  The tater tots are seasoned with salt, seasoned pepper, and onion powder.</li>
+                <li><span class="ingredient-name">Oil</span>: Peanut oil is perfect for frying homemade tater tots.</li>
+            </ul>
+        </div>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Boil, then drain, the potatoes.</li>
-            <li>Shred the potatoes and drain the excess moisture.</li>
-            <li>Mix the potatoes with parsley, flour, and seasonings.</li>
-            <li>Shape the mixture into tots.</li>
-            <li>Fry the tots until they&rsquo;re golden and crispy.</li>
-        </ol>
+        <div class="section" id="steps">
+            <h2 class="section-header">Steps</h2>
+            <ol class="steps-list">
+                <li>Boil, then drain, the potatoes.</li>
+                <li>Shred the potatoes and drain the excess moisture.</li>
+                <li>Mix the potatoes with parsley, flour, and seasonings.</li>
+                <li>Shape the mixture into tots.</li>
+                <li>Fry the tots until they&rsquo;re golden and crispy.</li>
+            </ol>
+        </div>
 
-        <h2>More Links</h2>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./fried_mozarella_cheeze_sticks.html">Fried Mozzarella Cheese Sticks</a></li>
-            <li><a href="./paneer_tikka_masala.html">Paneer Tikka Masala</a></li>
-            <li><a href="https://www.allrecipes.com/recipe/254894/homemade-tater-tots/" target="_blank" rel="noopener noreferrer">Original Recipe</a></li>
-        </ul>
+        <div class="section" id="more-links">
+            <h2 class="section-header">More Links</h2>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./fried_mozarella_cheeze_sticks.html">Fried Mozzarella Cheese Sticks</a></li>
+                <li><a href="./paneer_tikka_masala.html">Paneer Tikka Masala</a></li>
+                <li><a href="https://www.allrecipes.com/recipe/254894/homemade-tater-tots/" target="_blank" rel="noopener noreferrer">Original Recipe</a></li>
+            </ul>
+        </div>
     </body>
 </html>
