--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 id="title">Odin Recipes</h1>
 
         <ul>
             <li><a href="./recipes/tater_tots.html">Tater Tots</a></li>
